# deplens

./: .gitignore  AGENTS.md  LICENSE  README.md  go.mod  go.sum
.github/workflows/: test.yml
cmd/deplens/: main.go  main_test.go  test_helpers_test.go
docs/: glossary.md
docs/superpowers/plans/: 2026-04-01-pyproject-toml.md  2026-04-06-detector-maturity-model.md
docs/superpowers/specs/: 2026-03-31-pyproject-toml-design.md  2026-04-03-setup-cfg-design.md  2026-04-06-detector-maturity-model-design.md  2026-04-06-glossary-design.md  2026-04-11-python-uv-lock-design.md  2026-04-19-package-lock-design.md  2026-04-27-dependency-struct.md
internal/analyze/: banner.go  cargo_lock.go  cargo_lock_scan_test.go  cargo_lock_test.go  composer_lock.go  composer_lock_scan_test.go  composer_lock_test.go  default_rules.yaml  go_mod.go  go_mod_test.go  html.go  ini.go  ini_test.go  json.go  package_lock.go  package_lock_test.go  parser_factory.go  pep508.go  pipfile_lock.go  pipfile_lock_scan_test.go  pipfile_lock_test.go  pnpm_lock.go  pnpm_lock_scan_test.go  pnpm_lock_test.go  poetry_lock.go  poetry_lock_test.go  py_requirements.go  py_requirements_test.go  python.go  rules.go  scan.go  scan_test.go  terraform.go  toml.go  toml_test.go  typescript.go  uv_lock.go  uv_lock_test.go  xml.go  xml_test.go  (+4 more)
internal/render/: render.go  render_test.go
internal/render/testdata/: sample_monorepo_human.golden  sample_monorepo_json.golden
testdata/ansible/requirements-both/: requirements.yml
testdata/toml/pyproject/: pyproject.toml
testdata/yaml-workflow/: workflow.yaml
(+115 files in other folders)
